@@ -1,5 +1,5 @@
 Package: ncar
-Version: 0.4.0
+Version: 0.4.1
 Date: 2018-06-20 KST
 Title: Noncompartmental Analysis for Pharmacokinetic Report
 Description: Conduct a noncompartmental analysis as closely as possible to the most widely used commercial software for pharmacokinetic analysis, i.e. 'Phoenix(R) WinNonlin(R)' <https://www.certara.com/software/pkpd-modeling-and-simulation/phoenix-winnonlin/>.
@@ -19,5 +19,5 @@ NeedsCompilation: no
 LazyLoad: yes
 Repository: CRAN
 URL: https://cran.r-project.org/package=ncar
-Packaged: 2018-06-20 01:07:13 UTC; Kyun-SeopBae
-Date/Publication: 2018-06-20 04:32:57 UTC
+Packaged: 2018-07-10 21:40:16 UTC; Kyun-SeopBae
+Date/Publication: 2018-07-19 22:50:03 UTC
