@@ -1,19 +1,19 @@
-d4fa8d2fee96da08633a822c42f975f9 *DESCRIPTION
+26c2248b824f75b811a74fc9b69210dc *DESCRIPTION
 a9d520ee6381868013d4fdf17e4164b2 *NAMESPACE
 465293403001e254e1d974b150ea7fd0 *R/BasicUtil.R
 03fe0d60e9078eefdee7d6c914147038 *R/Res2Txt.R
 0e9c32a50b6e8507778a13c716bbbbbb *R/Round.R
-07d60e6e8378a0c182a4b17cf4d3450c *R/pdfNCA.R
-a50e8c44a2bbe8ef6789964a5804b6fb *R/rtfNCA.R
+502ce36b090ddff850211e9e73ae3d9d *R/pdfNCA.R
+b63232f3a0cb912e7ad1321bfebf99c0 *R/rtfNCA.R
 a8a18d565a61ec2142e164d8ab9795e9 *R/sysdata.rda
 c8b500b0b19df41b423b61c6b9712afd *R/txtNCA.R
-6ccb27fc3187ac39c9de9992477b0a8b *inst/NEWS.Rd
-09f0a8cf821bef85375a6e9a9af306cd *inst/doc/ncar-manual.pdf
+70fbf77dbe3b9a309349e0ae37a8e306 *inst/NEWS.Rd
+518090f7d2bf3378e2b29f944fde175b *inst/doc/ncar-manual.pdf
 3cd1f00857aa883eb77ef0f43d581e92 *man/BasicUtil.Rd
 72bd8778d4fe6a196387ccd2425237f5 *man/Res2Txt.Rd
 0230f2f2aeb33548a3edcd654f7843fd *man/Round.Rd
 baebda100ff925f877391bf4b9935619 *man/RptCfg.Rd
-ba8ba805c7cf19c230be1a635fd61a46 *man/ncar-package.Rd
-cceafd1fcd81099bcb46e5cf64a673e1 *man/pdfNCA.Rd
-0f156b437884eaafe874e4716efce2ef *man/rtfNCA.Rd
+965158363a026aedfed81193a250382c *man/ncar-package.Rd
+824bddbb962e007d5e4d88c5291ca98b *man/pdfNCA.Rd
+5657d9f0b486215a326f63fa7c67b03d *man/rtfNCA.Rd
 c2be950767d6f7b4623557f351074241 *man/txtNCA.Rd
